<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/background"
    android:orientation="vertical"
    tools:context=".Login_Form">

    <ScrollView
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:fillViewport="true"
        android:paddingLeft="30dp"
        android:paddingRight="30dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:orientation="vertical">

            <ImageView
                android:id="@+id/imageView"
                android:layout_width="match_parent"
                android:layout_height="200dp"
                android:contentDescription="@string/foto_perfil"
                android:padding="30dp"
                android:src="@drawable/perfil"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                tools:ignore="ImageContrastCheck" />

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/usuario"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:focusable="true"
                android:focusableInTouchMode="true"
                android:textColorHint="@color/colorAccent"
                app:layout_constraintTop_toBottomOf="@+id/imageView"
                tools:ignore="MissingConstraints"
                tools:layout_editor_absoluteX="30dp">

                <EditText
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:autofillHints="emailAddress"
                    android:ems="10"
                    android:hint="@string/user_L"
                    android:inputType="text"
                    android:textSize="20sp"
                    tools:ignore="TextContrastCheck" />
            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/password"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:inputType="textPassword"
                android:focusable="true"
                android:focusableInTouchMode="true"
                android:textColorHint="@color/colorAccent"
                app:layout_constraintTop_toBottomOf="@+id/textInputLayout"
                app:passwordToggleEnabled="true"
                tools:ignore="MissingConstraints"
                tools:layout_editor_absoluteX="30dp">

                <EditText
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:autofillHints="password"
                    android:ems="10"
                    android:hint="@string/password_L"
                    android:inputType="text"
                    android:textSize="20sp"
                    tools:ignore="TextContrastCheck" />
            </com.google.android.material.textfield.TextInputLayout>

            <Button
                android:id="@+id/Iniciarsecion"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="40dp"
                android:layout_marginTop="16dp"
                android:layout_marginEnd="40dp"
                android:background="@drawable/button_rounded"
                android:text="@string/login"
                android:textColor="#FFFFFF"
                android:textSize="22sp"
                app:layout_constraintTop_toBottomOf="@+id/textInputLayout2"
                tools:ignore="TextContrastCheck"
                tools:layout_editor_absoluteX="30dp" />

            <Button
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="40dp"
                android:layout_marginTop="16dp"
                android:layout_marginEnd="40dp"
                android:background="@drawable/button_rounded"
                android:onClick="btn_signupForm"
                android:text="@string/sign_up"
                android:textColor="#FFFFFF"
                android:textSize="22sp"
                app:layout_constraintTop_toBottomOf="@+id/Iniciarsecion"
                tools:ignore="TextContrastCheck"
                tools:layout_editor_absoluteX="30dp"/>
        </LinearLayout>
    </ScrollView>


</androidx.constraintlayout.widget.ConstraintLayout>